Creada estructura básica de la aplicación